--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,14 +3,21 @@
 @tailwind utilities;
 
 * {
-  padding:    0;
-  margin:     0;
   outline:    none;
   box-sizing: border-box;
+  color:      #F6F6F6;
+  @apply m-0 p-0;
+}
+
+img, svg, video {
+  @apply w-full;
+}
+
+body {
+  background: #212121;
 }
 
 .container {
-  padding:   0 15px;
-  margin:    0 auto;
+  @apply px-4 mx-auto;
   max-width: 1440px;
 }
