--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,6 +22,20 @@ body {
 
 .basic-single {
   @apply min-w-[120px];
+  &.search {
+    .select__control {
+      @apply bg-[#3C3C3C] text-sm;
+    }
+    .select__option {
+      @apply bg-[#3C3C3C] text-sm text-[#D9D9D9];
+    }
+    .select__placeholder {
+      @apply text-sm;
+    }
+  }
+  .select__placeholder {
+    @apply text-[#F6F6F6];
+  }
   .select__control {
     @apply bg-[#212121] rounded-[3px] border-[#A4A4A4] hover:bg-[#2F2F2F] cursor-pointer;
     &:hover {
