--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -53,7 +53,7 @@ body {
   }
   .select__menu {
     box-shadow:    none;
-    @apply mt-0 border-b border-r border-l border-[#A4A4A4];
+    @apply z-20 mt-0 border-b border-r border-l border-[#A4A4A4];
     border-radius: 0 0 3px 3px;
   }
   .select__menu-list {
