--- a/components/pages/vessels/TableSetting/TableSetting.module.scss
+++ b/components/pages/vessels/TableSetting/TableSetting.module.scss
@@ -1,4 +1,5 @@
 .tableSetting {
+  box-shadow: -35px 0px 77px rgba(23, 23, 23, 0.5);
   :global {
     .select__control {
       @apply bg-[#535353] min-h-[30px] border-none;
