--- a/components/pages/hardware/PerUserTable/PerUserTable.module.scss
+++ b/components/pages/hardware/PerUserTable/PerUserTable.module.scss
@@ -12,7 +12,7 @@
   }
   :global {
     .cell {
-      @apply overflow-visible text-[#A4A4A4];
+      @apply py-3 pl-3 md:pl-7 overflow-visible text-[#A4A4A4];
       &:nth-child(1) {
         @apply text-base;
       }
