--- a/components/pages/vessels/Table/Table.module.scss
+++ b/components/pages/vessels/Table/Table.module.scss
@@ -2,6 +2,9 @@
   &.animation {
     animation: showVessel 0.5s linear forwards;
   }
+  &:hover {
+    @apply relative z-20;
+  }
   :global {
     .cell {
       &.dockerimage {
