--- a/components/pages/vessels/index.module.scss
+++ b/components/pages/vessels/index.module.scss
@@ -1,7 +1,7 @@
 .table {
-  overflow:           auto;
+  overflow: visible;
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width:    none; /* for Firefox */
+  scrollbar-width: none; /* for Firefox */
   &::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
   }
