--- a/components/pages/vessels/index.module.scss
+++ b/components/pages/vessels/index.module.scss
@@ -1,4 +1,5 @@
 .table {
+  flex:               1 0 auto;
   overflow:           auto;
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width:    none; /* for Firefox */
